# mcp-sql-server

./: .coverage  .env.example  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: README.md  code-reviewer.md  deep-research-analyst.md  lesson-retriever.md  report-analyzer.md  session-lessons-documenter.md  set-baseline-metrics.md  sql-performance-monitor.md  sql-schema-discovery.md  sql-server-performance-tuner.md  tsql-specialist.md
.claude/rules/: field-reference.md  mcp-tools.md  sql-conventions.md
src/mcp_sql_server/: __init__.py  audit.py  config.py  errors.py  pool.py  registry.py  server.py
src/mcp_sql_server/resources/: database_info.py
src/mcp_sql_server/tools/: __init__.py  object_definitions.py  registry_tools.py
src/sql_playground_mcp/: __init__.py  audit.py  cache.py  database.py  logging_config.py  security.py  server.py  utils.py
src/sql_playground_mcp/resources/: __init__.py
src/sql_playground_mcp/tools/: query_execution.py  schema_discovery.py  stored_procedures.py
tests/: conftest.py  test_cache.py  test_config.py  test_config_multi.py  test_database.py  test_inject_top_clause.py  test_pool.py  test_query_dir.py  test_registry.py  test_security.py  test_server.py
